# ContextSwap

./: .gitignore  AGENT.md  IMPLEMENTATION_OUTLINE.md  IMPLEMENTATION_PLAN.md  README.md  e2e_test.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  start_server.sh  structure.md
contextswap/: README.md  __init__.py  config.py  evm.py  tron_utils.py  x402.py  x402_tron.py
contextswap/facilitator/: __init__.py  api.py  base.py  client.py  conflux.py  tron.py
contextswap/platform/: __init__.py  config.py  main.py
contextswap/platform/api/: app.py  deps.py
contextswap/platform/db/: __init__.py  (+2 more)
contextswap/seller/: __init__.py  api.py  tron_api.py
db/: README.md
env/: delegation_demo.template
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
skills/openclaw-bot-delegation/: README.md  SKILL.md
tests/: phase1_demo.py  test_openclaw_delegation_script.py  test_phase1_demo.py  test_phase1_demo_tron.py  test_platform_api.py  test_platform_inprocess_tg_manager_client.py  test_platform_seller_service.py  test_platform_tg_manager_client.py  test_platform_transaction_flow.py  test_unified_integration_flow.py
tg_manager/: AGENTS.md  README.md  __init__.py  main.py  pyproject.toml
tg_manager/scripts/: export_telethon_session.py
tg_manager/tests/: test_step1_config_and_security.py  test_step2_sqlite_models.py  test_step3_http_api.py  test_step4_telethon_service.py  test_step5_relay_auto_end.py  test_step6_mock_bot_relay.py
tg_manager/tg_manager/: __init__.py
(+41 files in other folders)
