[project]
name = "ContextSwap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "web3>=7.14.1",
    "telethon>=1.34",
    "eth-utils>=4.0.0",
    "anyio>=4.0.0",
]
